<resources>
    <string name="app_name">FileSender2</string>
    <string name="dev_email">weichen2046@gmail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_start_network_monitor">Start Net Monitor</string>
    <string name="action_stop_network_monitor">Stop Net Monitor</string>

    <string name="desktop_list">Desktop List</string>
    <string name="choose_file">Choose File</string>
    <string name="auth_request_title">Authentication Request</string>
    <string name="fmt_auth_request_text">Authentication from IP: %1$s</string>
    <string name="file_sending_request">File Sending Request</string>
    <string name="fmt_file_to_recv">%d files to receive</string>
    <string name="request_accept">Accept</string>
    <string name="request_denial">Denial</string>
    <string name="request_details">Details</string>

    <string name="loading_desktop_title">Desktop List</string>
    <string name="loading_desktop_message">Loading...</string>

    <string name="connected_device_share">Share</string>
    <string name="connected_device_details">Details</string>

    <string name="device_name">Device Name</string>
    <string name="device_ip_address">Device IP Address</string>
    <string name="device_description">Device Description</string>

    <string name="file_send_complete">File send complete</string>
    <string name="title_activity_pending_recv_files">File Receiving List</string>
    <string name="action_denial_all">Denial all files</string>

    <string name="empty_connected_device">No connected device</string>
</resources>
