<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="156dp"
    android:layout_marginTop="@dimen/main_card_margin_vertical"
    android:layout_marginLeft="@dimen/main_card_margin_horizontal"
    android:layout_marginRight="@dimen/main_card_margin_horizontal"
    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
    card_view:cardElevation="@dimen/card_recycler_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/connected_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_title_margin"
            android:layout_marginRight="@dimen/card_title_margin"
            android:layout_marginTop="@dimen/card_title_margin"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/device_name" />

        <TextView
            android:id="@+id/connected_device_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connected_device_name"
            android:layout_marginLeft="@dimen/card_subtitle_margin"
            android:layout_marginRight="@dimen/card_subtitle_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:text="@string/device_ip_address" />

        <TextView
            android:id="@+id/connected_device_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connected_device_address"
            android:layout_marginLeft="@dimen/card_subtitle_margin"
            android:layout_marginRight="@dimen/card_subtitle_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:text="@string/device_description"
            android:textColor="@color/gray_deep" />

        <View
            android:id="@+id/connected_device_separate_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/connected_device_description"
            android:layout_marginTop="@dimen/card_title_margin"
            android:background="@color/gray_light" />

        <LinearLayout
            android:id="@+id/ll_card_main3_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/connected_device_separate_line"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_connected_device_share"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected_device_share" />

            <Button
                android:id="@+id/btn_connected_device_details"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected_device_details" />

        </LinearLayout>

        <ImageView
            android:id="@+id/connected_device_icon"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/material_design_demo_img"
            android:scaleType="fitXY" />

    </RelativeLayout>

</android.support.v7.widget.CardView>